--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ footer {
     
 
     .notification-panel {
-        background-color: sandybrown;
+        background-color: whitesmoke;
         width: 100%;
         border: 5px solid black;
         justify-items: center;
@@ -227,9 +227,9 @@ footer {
     /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
+    /* background-color: rgb(0, 0, 0); */
     /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
+    /*background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
 
     .modal-content {
