--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ footer {
     max-width: 1200px;
     padding-left: 1em;
 
+
     .control-button {
         display: inline-flex;
         margin-right: 1em;
@@ -162,6 +163,24 @@ footer {
     }
 }
 
+.openNotification {
+    visibility: hidden;
+    display: none;
+    background-color: rgba(25, 70, 134, 1);
+    color: white;
+    /* max-width: 60ch; */
+    /* height: 100px; */
+    border-radius: 10px;
+    overflow-wrap: anywhere;
+    padding: 10px;
+    margin-left: 1em;
+
+    position: sticky;
+    top: 0;
+    left: 5px;
+    z-index: 1000;
+
+}
 
 /* Modal */
 .modal {
